cabal-version:       3.0
name:                wp-server
version:             0.1.0.0
category:            Web
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:
    -Wall
    -Wcompat
    -Werror
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -fhide-source-paths
    -ferror-spans
    -freverse-errors

  default-extensions:  DataKinds
                     , OverloadedStrings
                     , MultiParamTypeClasses
                     , DeriveGeneric
                     , KindSignatures
                     , QuasiQuotes
                     , LambdaCase
                     , TemplateHaskell
                     , TypeOperators
                     , FlexibleInstances
                     , PolyKinds
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , monad-logger
                     , transformers
                     , http-media
                     , bytestring
                     , case-insensitive
                     , inline-c
                     , text
                     , servant-blaze
                     , blaze-html
                     , http-api-data
                     , MissingH
                     , template-haskell
                     , tagged
                     , raw-strings-qq

  default-language:    Haskell2010

executable wp-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
    -Wall
    -Wcompat
    -Werror
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -fhide-source-paths
    -ferror-spans
    -freverse-errors

  build-depends:       base
                     , wp-server

  default-language:    Haskell2010
